--- a/playermanagement/src/main/resources/application.properties
+++ b/playermanagement/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=playermanagement
+server.port=7001
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/springAPIDb
 spring.datasource.username=postgres
