--- a/gamesmanagement/src/main/resources/application.properties
+++ b/gamesmanagement/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=gamesmanagement
+server.port=7000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/springAPIDb
 spring.datasource.username=postgres
